# python-zxart

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
src/zxart/: client.py  models.py
zxart/: client.py  common.py  models.py  music.py
