[project]
name = "zxart"
version = "0.3.1"
keywords = ["zxart", "zxspectrum", "api", "async", "client"]
license = "Apache-2.0"
authors = [{name = "Sergey Dudanov", email = "sergey.dudanov@gmail.com"}]
maintainers = [{name = "Sergey Dudanov", email = "sergey.dudanov@gmail.com"}]
readme = "README.md"
description = "Asynchronous Python client for the ZXArt.ee API."
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.0",
    "mashumaro>=3.15",
    "orjson>=3.10.0",
]

[project.urls]
homepage = "https://github.com/dudanov/python-zxart"
repository = "https://github.com/dudanov/python-zxart"
documentation = "https://github.com/dudanov/python-zxart"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  {include = "zxart", from = "src"},
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
